--- a/index.html
+++ b/index.html
@@ -5,6 +5,82 @@
         <tittle>Incio</tittle>
     </head>
     <body>
+        <h1> HOLA MUNDO</h1>
+        <h2> HOLA MUNDO</h2>
+        <h3> HOLA MUNDO</h3>
+        <h4> HOLA MUNDO</h4>
+        <h5> HOLA MUNDO</h5>
+        <p>
+            esto es un texto <strong>muy</strong> largo
+        </p>
+        <br>
+        <p>
+            <I>Esto</I> es un <small>texto</small> muy largo
+        </p>
+        <table border="1">
+            <tr>
+                <td> celda 11 </td>
+                <td> celda 12 </td>
+                <td> celda 13 </td>
+            </tr>
+            <tr>
+                <td> celda 21 </td>
+                <td> celda 22 </td>
+                <td> celda 23 </td>
+            </tr>
+            <tr>
+                <td rowspan="2"> celda 31 </td>
+                <td rowspan="2"> celda 32 </td>
+            </tr>
+            <tr>
+                <td> celda 41 </td>
+                <td> celda 42 </td>
+            </tr>
 
+        </table>
+
+        <table border="1">
+            <thead>
+                <tr>
+                    <th colspan="3"> Contactos</th>
+                </tr>
+
+                <tr>
+
+                <td>Nombre</td>
+                <td>Telefono</td>
+                <td>Correo</td>
+                
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Sebas</td>
+                    <td>123</td>
+                    <td>test@test.com</td>
+                </tr>
+                <tr>
+                    <td>Sebas</td>
+                    <td>123</td>
+                    <td>test@test.com</td>
+                </tr>
+                <tr>
+                    <td>Sebas</td>
+                    <td>123</td>
+                    <td>test@test.com</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th colspan ="3">fin..</th>
+                </tr>
+            </tfoot>
+        </table>
+        <br>
+        <br>
+        <a href="https://www.google.com"> Ir a Uniboyaca </a>
+        <a href="index.html"> Inicio </a>
     </body>
+
 </html>
